Bug 371822 - Dolphin should not toggle the terminal panel if Konsole is not installed
Summary: Dolphin should not toggle the terminal panel if Konsole is not installed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: terminal (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://i.imgur.com/9SyoG1l.png
Keywords: usability
: 377086 386016 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-29 12:47 UTC by Boris
Modified: 2018-06-09 19:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Boris 2016-10-29 12:47:09 UTC
User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:49.0) Gecko/20100101 Firefox/49.0
Build Identifier: Version 16.04.3

On xubuntu Konsole is not installed by default, so after I install Dolphin but not Konsole (it took me very long time to find out it's needed) F4 shows plain grey panel where terminal would be (That's the included picture) and shift+F4 doesn't do anything at all. Right click menu is also missing the "Open terminal here" option.
Installing Konsole fixes all this, but there are problems with this: I had no idea that's needed, it doesn't give you any error message and there should be option to choose what terminal to use and it doesn't respect preferred terminal setting in xubuntu.

Reproducible: Always

Steps to Reproduce:
1. Uninstall Konsole if installed
2. kill Dolphin
3. start Dolphin again
4. In any folder press either F4 of shift+F4
Actual Results:  
F4 gives you the result visible in the included picture, shift+F4 or "Open terminal" in tools menu doesn't do anything, "open terminal here" is missing from right click menu in folder.

Expected Results:  
Two options: Dolphin should open terminal that is set as preferred application in xubuntu settings or Konsole should be dependency.

This happenned on freshly installed xubuntu 16.10, but I think it could happen on any system that lets you install dolphin without konsole.
Comment 1 Elvis Angelaccio 2016-11-01 11:37:12 UTC
(In reply to Boris from comment #0)
> User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:49.0)
> Gecko/20100101 Firefox/49.0
> Build Identifier: Version 16.04.3
> 
> On xubuntu Konsole is not installed by default, so after I install Dolphin
> but not Konsole (it took me very long time to find out it's needed) F4 shows
> plain grey panel where terminal would be (That's the included picture) and
> shift+F4 doesn't do anything at all. Right click menu is also missing the
> "Open terminal here" option.
> Installing Konsole fixes all this, but there are problems with this: I had
> no idea that's needed

That's a task of your package manager: it should tell you that Konsole is an optional runtime dependency of Dolphin.

> there should be option to choose what terminal to use and it doesn't respect
> preferred terminal setting in xubuntu.

There is (you need to install Plasma's System Settings though), but yeah it's Plasma-specific and  probably not shared with XFCE, unfortunately. I'm not sure this can be fixed.

But I agree that Dolphin should not show an empty dock widget (upon pressing F4) if Konsole is not installed (thus I'm changing the title).
Comment 2 Don Nguyen 2017-02-23 23:37:11 UTC
> But I agree that Dolphin should not show an empty dock widget (upon pressing
> F4) if Konsole is not installed (thus I'm changing the title).

I'd like to present some options related to the Terminal Panel when Konsole is not installed and give you my analysis.

1)  Do not show the Terminal Panel option in the menu when Konsole is not installed.
2)  Disable(gray out) the Terminal Panel option in the menu when Konsole is not installed.
3)  Pop up an information dialog to inform the user that Konsole is not installed when the user tries to invoke the Terminal Panel.
4)  Display a message inside the Terminal Panel indicating that Konsole is not installed when the user invokes the Terminal Panel.

Option 1 hides the fact that we have this feature if Konsole is not installed.  Option 2 shows that we have such a feature but does not tell the user why it's disabled - the user will have to search for why this is disabled.  Option 3 gives the user information about this feature and why it's missing and how to enable it, but it seems a bit intrusive to me.  My preferred choice is option 4.  It mimics normal behavior except that instead of having a working Terminal Panel, it lets the user know why the feature is missing and how to enable it.
Comment 3 Elvis Angelaccio 2017-02-24 11:58:18 UTC
(In reply to Don Nguyen from comment #2)
> > But I agree that Dolphin should not show an empty dock widget (upon pressing
> > F4) if Konsole is not installed (thus I'm changing the title).
> 
> I'd like to present some options related to the Terminal Panel when Konsole
> is not installed and give you my analysis.
> 
> 1)  Do not show the Terminal Panel option in the menu when Konsole is not
> installed.
> 2)  Disable(gray out) the Terminal Panel option in the menu when Konsole is
> not installed.
> 3)  Pop up an information dialog to inform the user that Konsole is not
> installed when the user tries to invoke the Terminal Panel.
> 4)  Display a message inside the Terminal Panel indicating that Konsole is
> not installed when the user invokes the Terminal Panel.
> 
> Option 1 hides the fact that we have this feature if Konsole is not
> installed.  Option 2 shows that we have such a feature but does not tell the
> user why it's disabled - the user will have to search for why this is
> disabled.  Option 3 gives the user information about this feature and why
> it's missing and how to enable it, but it seems a bit intrusive to me.  My
> preferred choice is option 4.  It mimics normal behavior except that instead
> of having a working Terminal Panel, it lets the user know why the feature is
> missing and how to enable it.

+1, nice analysys!
Comment 4 Elvis Angelaccio 2017-03-02 09:49:17 UTC
*** Bug 377086 has been marked as a duplicate of this bug. ***
Comment 5 Roman Inflianskas 2018-03-01 18:16:10 UTC
I removed Konsole, tested that I cannot launch it. I opened Dolphin and I could open terminal panel. Does that mean that Dolphin uses some Konsole part that is installed without Konsole itself?
Comment 6 Nate Graham 2018-03-08 20:45:55 UTC
Yes, it's theoretically possible to have konsole-kpart installed if you uninstall konsole but don't also uninstall dependencies. This should only work in your current session because konsole-kpart is using konsole stuff that's still loaded into memory, even if it's missing on-disk. If you log out and log back in, it should fail as expected.

Regardless, it's a very small corner case.

Oh, and Roman has been kind enough to submit a patch for this: https://phabricator.kde.org/D11118
Comment 7 Roman Inflianskas 2018-03-11 17:42:05 UTC
Git commit 68a924af05e7adf1c36b8139ee33a739298fe36d by Roman Inflianskas.
Committed on 11/03/2018 at 17:41.
Pushed by romaninflianskas into branch 'master'.

Show a message if Konsole part is not installed

Summary:
Show a message if Konsole part is not installed
FIXED-IN: 18.04.0

{F5749731}

Reviewers: ngraham, progwolff, elvisangelaccio

Reviewed By: ngraham, progwolff, elvisangelaccio

Subscribers: rkflx, ngraham, elvisangelaccio, broulik, progwolff, #dolphin

Differential Revision: https://phabricator.kde.org/D11118

M  +29   -0    src/panels/terminal/terminalpanel.cpp
M  +2    -0    src/panels/terminal/terminalpanel.h

https://commits.kde.org/dolphin/68a924af05e7adf1c36b8139ee33a739298fe36d
Comment 8 Julian Steinmann 2018-06-09 19:22:31 UTC
*** Bug 386016 has been marked as a duplicate of this bug. ***